# Appreciative-Bot

./: Readme.md  app.py  bot.ipynb  bot.py  bot2.py  botold.py  notes.txt  pyproject.toml
ishtam_ai/: __init__.py  app.py  chatbot.py  content_generator.py  email_service.py  scheduler.py
