[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ishtam_ai"  # <--- Make sure this name is available on PyPI!
version = "1.0.0"
description = "A love message generator and scheduler using AI."
authors = [{name = "Sheeba Moghal"}]
license = {text = "MIT"}
dependencies = [
    "streamlit",
    "ollama"
]

[tool.setuptools]
packages = ["ishtam_ai"]
