[project]
name = "ishtam_ai"
version = "1.0.9"  # Incremented version
description = "An AI-powered chatbot and email automation package with Streamlit UI"
authors = [{ name = "Sheeba Moghal", email = "your-email@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "streamlit",
    "ollama",
    "requests",
    "pandas",
    "numpy"
]

[tool.setuptools]
packages = ["ishtam_ai"]
include-package-data = true

[tool.setuptools.package-data]
ishtam_ai = ["*.py"]  # Ensures ALL `.py` files including `app.py` are included
